fixed picture padding issue and removed accordion transition on mobile

--- a/app/scss/_benefits.scss
+++ b/app/scss/_benefits.scss
@@ -16,14 +16,20 @@
     display: none;
     width: 100%;
 
+    picture {
+      display: block;
+      height: 100%;
+    }
+
     img {
       width: 100%;
-      height: auto;
+      height: 100%;
     }
 
     @include breakpoint-up(large) {
       max-width: 600px;
       display: block;
+      aspect-ratio: 3/4;
     }
   }
   &__content {
